<resources>
    <string name="app_name">LifeKAU</string>
    <string name="food_review_title">학식 리뷰</string>
    <string name="lecture_review_title">강의 리뷰</string>
    <string name="cancel_button_string">취소</string>
    <string name="submit_button_string">완료</string>
    <string name="food_corner_name1">A 코너</string>
    <string name="food_corner_name2">B 코너</string>
    <string name="food_corner_name3">C 코너</string>
    <string name="food_corner_name4">D 코너</string>
    <string name="food_corner_name5">스낵</string>
    <string name="food_corner_name6">프리미엄</string>
    <string name="food_corner_name7">조식</string>
    <string name="food_review_order_by_time_string">시간순</string>
    <string name="food_review_order_by_rating_string">평점순</string>
    <string name="text_limit_message">최대 %1$d자 까지 입력할 수 있습니다</string>
    <string name="lecture_review_search_bar_hint">"강의명(교수)으로 검색하세요(초성으로도 가능)"</string>
    <string name="review_number_of_review_string"> 개의 평가</string>
    <string name="firebase_database_food_reviews">food_reviews</string>
    <string name="firebase_database_lecture_reviews">lecture_reviews</string>
    <string name="firebase_database_food_review_corner_id">corner %1$d</string>
    <string name="firebase_database_lectures">Lectures</string>
    <string name="firebase_database_posts">posts</string>
    <string name="firebase_database_post_comments">post-comments</string>
    <string name="review_write_success_message">리뷰가 성공적으로 게시되었습니다!</string>
    <string name="post_write_success_message">이야기가 성공적으로 게시되었습니다!</string>
    <string name="new_review_message">새로운 리뷰가 올라왔습니다!</string>
    <string name="please_write_review_alert_message">리뷰를 입력해 주세요!</string>
    <string name="please_write_post_text_alert_message">내용을 작성해주세요!</string>
    <string name="empty_alarm_list_message">알람이 없습니다.</string>
    <string name="empty_review_list_message">평가가 없습니다.</string>
    <string name="empty_post_list_message">이야기가 없습니다.</string>
    <string name="write_post_hint_message">하고 싶은 이야기를 자유롭게 써주세요.</string>
    <string name="submit_post_button">게시하기</string>
    <string name="write_new_post">새 글 쓰기</string>
    <string name="write_new_review">새 리뷰 쓰기</string>
    <string name="text_gone_warning_message">작성 중인 글이 사라집니다.\n계속 하시겠습니까?</string>
    <string name="review_gone_warning_message">작성 중인 리뷰가 사라집니다.\n계속 하시겠습니까?</string>
    <string name="review_edit_cancel_alert_message">수정을 취소해도 전에 작성했던 리뷰는 그대로 남습니다. 수정을 취소하시습니까?</string>
    <string name="how_was_your_food">이 메뉴가 어땠나요?</string>
    <string name="how_was_your_class">이 강의가 어땠나요?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="post_comment_count">댓글 %1$s개</string>
    <string name="see_previous_comments">이전 댓글 보기</string>
    <string name="reading_more_comments">댓글을 읽어들이는 중...</string>
    <string name="type_the_comment">댓글을 입력하세요...</string>
    <string name="successfully_comment_registered">댓글이 성공적으로 등록되었습니다!</string>
    <string name="post_deleted_by_author">보고 계신 글이 작성자에 의해 삭제 되었습니다.</string>
    <string name="order_by_dialog_title">리뷰 정렬하기</string>
    <string name="order_by_time_desc">최근 날짜순</string>
    <string name="order_by_time_asc">오래된 날짜순</string>
    <string name="order_by_rating_desc">높은 평점순</string>
    <string name="order_by_rating_asc">낮은 평점순</string>
    <string name="dialog_edit">수정</string>
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니오</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_cancel">취소</string>
    <string name="post_delete_alert_dialog_title">이야기 삭제</string>
    <string name="comment_delete_alert_dialog_title">댓글 삭제</string>
    <string name="post_deleted_message">이야기가 성공적으로 삭제되었습니다.</string>
    <string name="post_delete_alert_dialog_message">이야기가 삭제되면 더 이상 찾을 수 없게됩니다. 삭제하시겠습니까?</string>
    <string name="comment_delete_alert_dialog_message">이 댓글을 삭제하시겠어요?</string>
    <string name="anonymous_author">익명(작성자)</string>
    <string name="food_review_only_once_alert_message">오늘 %1$s 에 대한 평가를 이미 작성하셨습니다. 지우고 다시 작성하시겠습니까?</string>
    <string name="lecture_review_only_once_alert_message">%1$s에 대한 평가를 이미 작성하셨습니다. 지우고 다시 작성하시겠습니까?</string>

    <string name="menu_1">커뮤니티</string>
    <string name="menu_2">리뷰</string>
    <string name="menu_3">공지</string>
    <string name="menu_4">자리</string>
    <string name="menu_5">LMS &amp; Info</string>

    <!-- HTTP 헤더 관련 스트링 정의-->
    <string name="header_accept">text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8</string>
    <string name="header_accpet_encoding">gzip, deflate</string>
    <string name="header_accept_encoding_with_br">gzip, deflate, br</string>
    <string name="header_accpet_language">ko-KR,ko;q=0.9,en-US;q=0.8,en;q=0.7</string>
    <string name="header_user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.132 Safari/537.36</string>
    <string name="header_connection">keep-alive</string>

    <!-- Portal 관련 스트링 정의-->
    <string name="portal_page">"http://www.kau.ac.kr"</string>
    <string name="portal_lms_check_page">https://www.kau.ac.kr/page/login.jsp?target_page=act_Lms_Check.jsp@chk1-1</string>
    <string name="portal_act_login_page">https://www.kau.ac.kr/page/act_login.jsp</string>
    <string name="portal_portal_check_page">https://www.kau.ac.kr/page/act_Portal_Check.jsp</string>
    <string name="portal_portal_login_page">https://portal.kau.ac.kr/portal/PortalLoginSso</string>
    <string name="portal_my_portal_page">https://portal.kau.ac.kr/portal/MyPortal_No.jsp</string>
    <string name="portal_my_menu_b_page">https://portal.kau.ac.kr/admt/MyMenuB.jsp</string>
    <string name="portal_scholar_page">https://portal.kau.ac.kr/sugang/PersScholarTakeList.jsp</string>
    <string name="portal_curr_grade_page">https://portal.kau.ac.kr/sugang/GradHakList_2018.jsp</string>
    <string name="portal_accumulated_grade_page">https://portal.kau.ac.kr/sugang/GradTotList.jsp</string>
    <string name="portal_accumulated_grade_summary_page">https://portal.kau.ac.kr/sugang/GradTermList.jsp</string>
    <string name="portal_examination_time_table_page">https://portal.kau.ac.kr/sugang/SugangExamList.jsp</string>
    <string name="portal_get_student_id_page">https://lib.kau.ac.kr/HAULMS/sso/LoginPortalSSO.csp</string>
    <string name="portal_curr_grade_no_data">데이터 없음</string>
    <string name="portal_time_table_no_data">#.입력된 데이터가 존재하지 않습니다.</string>
    <string name="portal_login_failed">아이디 또는 비밀번호 오류입니다.</string>
    <string name="portal_session_disconnect">세션이 끊겼습니다. 다시 로그인 하시기 바랍니다.</string>
    <string name="portal_network_error_message">네트워크 오류가 발생하였습니다.</string>
    <string name="portal_no_current_grade_error_message">학기 성적이 등록되지 않았습니다.</string>
    <string name="portal_no_time_table_error_message">시험시간표가 등록되지 않았습니다.</string>
    <string name="portal_session_disconnect_error_message">세션이 끊겼습니다. 다시 로그인합니다.</string>

    <!--LMS 관련 스트링 정의-->
    <string name="lms_sso_page">http://lms.kau.ac.kr/local/ssotm/sso_chk.php</string>
    <string name="lms_login_page">http://lms.kau.ac.kr/login/</string>
    <string name="lms_login_index_page">http://lms.kau.ac.kr/login/index.php</string>
    <string name="lms_my_page">http://lms.kau.ac.kr/my/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="error_invalid_id">잘못된 아이디 형식입니다.</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="error_invalid_password">비밀번호가 너무 짧습니다</string>
    <string name="prompt_input_id">아이디를 입력해주세요</string>
    <string name="prompt_input_password">비밀번호를 입력해주세요</string>
    <string name="error_incorrect_password">비밀번호가 다릅니다</string>
    <string name="error_field_required">이 곳을 입력해주세요</string>

    <!-- 도서관 관련 스트링 -->
    <string name="library_reading_room_name_01">제1열람실A</string>
    <string name="library_reading_room_name_02">제1열람실B</string>
    <string name="library_reading_room_name_03">제2열람실</string>
    <string name="library_reading_room_name_04">제3열람실</string>
    <string name="library_reading_room_name_05">제5열람실</string>
    <string name="library_reading_room_detail_format">이용중 : %d석 / 여석 : %d석</string>

    <string name="library_study_room_name_01">스터디룸A</string>
    <string name="library_study_room_name_02">스터디룸B1</string>
    <string name="library_study_room_name_03">스터디룸B2</string>
    <string name="library_study_room_name_04">스터디룸C1</string>
    <string name="library_study_room_name_05">스터디룸C2</string>
    <string name="library_study_room_name_06">스터디룸C3</string>
    <string name="library_study_room_detail_format">%s</string>

    <string name="time_table_day_01">월</string>
    <string name="time_table_day_02">화</string>
    <string name="time_table_day_03">수</string>
    <string name="time_table_day_04">목</string>
    <string name="time_table_day_05">금</string>


    <string name="available_now">이용 가능</string>
    <string name="not_available_now">이용 불가</string>
    <string name="no_seat_now">여석 없음</string>

    <string name="permission_rationale">권한 요청</string>

    <string name="shared_preference_app">LIFEKAU</string>
    <string name="can_write_post_after_1_minute">1분이 지나야 새로운 글을 쓸 수가 있습니다.</string>
    <string name="can_write_comment_after_1_minute">1분이 지나야 새로운 댓글을 쓸 수가 있습니다.</string>
    <string name="logout_dialog_title">로그아웃</string>
    <string name="really_logout">정말 로그아웃 하시겠습니까?</string>

    <string name="food_menu_student_rest_page">http://www.kau.ac.kr/page/onestopservice/soss_schoollife_menu.jsp</string>
    <string name="food_menu_student_rest_view_page">http://www.kau.ac.kr/campuslife/menu_view/cms/%d_menu_view.html</string>
    <string name="food_menu_dormitory_rest_page">http://www.kau.ac.kr/page/web/life/community/meal_li.jsp</string>
</resources>
