<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_write_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/write_post_back_image_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:text="@string/write_new_post"
            android:textColor="@android:color/white"
            android:textSize="8pt"/>

        <TextView
            android:id="@+id/write_post_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusable="false"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/submit_post_button"
            android:textColor="@android:color/darker_gray"
            android:textSize="7pt"/>
    </LinearLayout>

    <EditText
        android:id="@+id/write_post_edit_text"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="4dp"
        android:gravity="left|top"
        android:hint="@string/write_post_hint_message"
        android:paddingBottom="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"/>

</LinearLayout>
