<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_background9"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:context="com.lifekau.android.lifekau.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/kau_bold2"/>


            <AutoCompleteTextView
                android:id="@+id/id"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corner_login_edit_text"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/prompt_id"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corner_login_edit_text"
                android:ellipsize="end"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>


            <Button
                android:id="@+id/id_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="250dp"
                android:layout_height="52dp"
                android:background="@drawable/rounded_corner_login_button"
                android:text="@string/action_sign_in"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
